# brain-mri-prepkit

./: .gitignore  README.md  list.sh  pyproject.toml  reg_n_skull_strip.sh  registration.py  registration.sh
brain_mri_prepkit/: __init__.py
prep/: reg_n_skull_strip.sh  skull_stripping.py
src/: __init__.py  registration.py  registration.sh  skull_stripping.py
