[tool.poetry]
name = "brain-mri-prepkit"
version = "0.1.0"
description = ""
authors = ["pritam-dey3 <pdeypritam@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_mri_prepkit"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
