[project]
name = "brain-mri-prepkit"
version = "0.1.0"
description = ""
authors = [{ name = "pritam-dey3", email = "pdeypritam@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "typer[all]>=0.16.0",
    "nipype>=1.4.6,<2",
    "tqdm>=4.65.0,<5",
    "urllib3==1.26.16",
]

[project.scripts]
prepkit = "src:app"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "src/*.sh",
]

[tool.hatch.build.targets.wheel]
include = [
    "src",
    "src/*.sh",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
